fix: footer size on mobile, theme color

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -14,7 +14,7 @@
 
 @include until($mobile) {
     .frameworkButton, .spacer {
-        display: none;
+        display: none !important;
     }
 
     .footer {
